syntax = "proto3";


message GroupMemberChange {
    // Added Identities
    repeated string added = 1;
    // Removed Identities
    repeated string removed = 2;
}

message GroupNameChange {
    // Old group name
    string old_name = 1;
    // new group name
    string new_name = 2;
}